components/policies/rings/ring-3/base/base-snapshot/konflux-rbac/bootstrap-tenant-namespace/.chainsaw-test/chainsaw-assert-clusterpolicy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: bootstrap-tenant-namespace-np-ocpconsole
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: bootstrap-tenant-namespace-np-ocpingress
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: bootstrap-tenant-namespace-np-ocpmonitoring
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: bootstrap-tenant-namespace-np-olm
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: bootstrap-tenant-namespace-np-samenamespace
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: bootstrap-tenant-namespace-rbcm
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
